--- a/AUTHORS
+++ b/AUTHORS
@@ -1,1 +1,9 @@
-Denis Roio <jaromil@nimk.nl>
+
+The main author of HDSync is Denis Roio <jaromil@nimk.nl>
+
+HDSync code Includes GNU netcat by Giovanni Giacobbi
+
+And is packaged to run on B-rad's WDLXTV firmware
+
+
+
