utils scripts to change video output renaming to hdsync and cleanup

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,9 +1,9 @@
 
-The main author of HDSync is Denis Roio <jaromil@nimk.nl>
+The author of HDSync is Denis Roio <jaromil@nimk.nl>
 
-HDSync code Includes GNU netcat by Giovanni Giacobbi
+HDSync code includes GNU netcat by Giovanni Giacobbi
 
-And is packaged to run on B-rad's WDLXTV firmware
+This software is packaged to run on B-rad's WDLXTV firmware
 
 
 
