documentation update for new release

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+16 November 2010 - 0.4 "Pixxxel"
+	Simplified configuration
+	Support for Invisible OSD
+	Automatic LAN setup
+	
 03 September 2010 - 0.3 "Heliocentric"
 	Fix to support more than 2 channels
 	User docs: setup manual
