--- a/tools/optware/AUTHORS
+++ b/tools/optware/AUTHORS
@@ -1,7 +1,7 @@
 
-The mantainer of WDLXTV_OPTWARE is Denis Roio <jaromil@nimk.nl>
+The mantainer of WDLXTV_OPTWARE is Denis Roio <jaromil@dyne.org>
 
-Optware install script originally written by Leon Kos
+Parts of the optware install scripts were written by Leon Kos
 
 This software is packaged to run on B-rad's WDLXTV firmware and
 benefits by the research and development of the wdlxtv.com community.
