wdtvhack: updated to reset also the web password

--- a/tools/wdtvhack/AUTHORS
+++ b/tools/wdtvhack/AUTHORS
@@ -1,4 +1,6 @@
-Denis Roio <jaromil@dyne.org>
+Denis Roio <jaromil@dyne.org> http://jaromil.dyne.org
 
-	http://jaromil.dyne.org
+This software is packaged to run on B-rad's WDLXTV firmware and
+benefits by the research and development of the wdlxtv.com community.
+
 
