documentation updates for 0.5 release

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,8 +1,14 @@
+13 May 2011 - 0.5 "Friday 13th"
+	Improved frame precision
+	Use AVRemote (UPNP AVTransport)
+	Operates without OSD (kill dmaosd)
+	Documentation updates
+
 16 November 2010 - 0.4 "Pixxxel"
 	Simplified configuration
 	Support for Invisible OSD
 	Automatic LAN setup
-	
+
 03 September 2010 - 0.3 "Heliocentric"
 	Fix to support more than 2 channels
 	User docs: setup manual
