--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,13 @@
 
+April 2011 - 0.4 "PiXXXeL"
+
+        Customized by DreamView MultiMedia and used inside a flower
+        fair to sync 16 40" LCD screens
+
+September 2010 - 0.3 "Heliocentric"
+
+	Deployed to exibit "Heliocentric" by Semiconductor
+
 29 June 2010 - 0.2 "Rites"
 
 	Deployed in gallery Heden (Den Haag)
