--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+28 October 2011 - 0.6 "Sunflower"
+	Improved stability
+	Fixes to loop videos
+	Fixes to network handshake
+	Documentation updates
+	New website, mailinglist
+
 13 May 2011 - 0.5 "Friday 13th"
 	Improved frame precision
 	Use AVRemote (UPNP AVTransport)
