--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+13 December 2011 - 0.6.1 "Dried sunflower"
+	Watchdog to avoid random freezes
+	Better of operations logging
+	Manual option for network configuration
+	Sleep value now in micro-seconds (1/1000000)
+	
 28 October 2011 - 0.6 "Sunflower"
 	Improved stability
 	Fixes to loop videos
