--- a/README
+++ b/README
@@ -11,7 +11,7 @@
 :   MM    MM `Mb    MM      L.   I8     VVV      MM    MM YM.    ,
 : .JMML  JMML.`Wbmd"MML.    M9mmmP'     ,V     .JMML  JMML.YMbmd'
 :                                      ,V
-:                                   OOb'              ver. 0.6
+:                                   OOb'              ver. 0.6.1
 :
 :      A network based sync-starter for multi-channel HD Video
 :                                    by Denis Roio aka Jaromil
@@ -45,7 +45,7 @@ frames, with further development we aim to achieve frame exact sync.
 
 ** Documentation
 
-A user manual is online at ftp://ftp.dyne.org/hdsync/hdsync_manual.pdf
+A user manual is online at http://ftp.dyne.org/hdsync/hdsync_manual.pdf
 
 More documentation is included inside the doc/ directory
 
